# a2mcp

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  mcp-gateway.example.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/design/: fastmcp-quirks.md  primitive-shelf.md
openspec/changes/add-access-groups/: design.md  proposal.md  tasks.md
openspec/changes/add-access-groups/specs/access-groups/: spec.md
openspec/changes/add-gateway-v1/: design.md  proposal.md  tasks.md
openspec/changes/add-gateway-v1/specs/gateway/: spec.md
openspec/changes/add-origin-resource-fix/: design.md  proposal.md  tasks.md
openspec/changes/add-origin-resource-fix/specs/oauth-resource-discovery/: spec.md
src/a2mcp/: __init__.py  __main__.py  auth.py  compose.py  config.py  health.py  scope.py  server.py  telemetry.py
tests/: conftest.py  test_auth.py  test_compose.py  test_config.py  test_health.py  test_http.py  test_scope.py  test_telemetry.py
